[tool.poetry]
name = "crypto-alpine"
version = "0.1.1"
description = "Python library for cryptocurrency trading"
readme = "README.md"
authors = ["pydavid"]
packages = [{include = "alpine"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
